fixed desighn on tablet

--- a/client/src/containers/Dealbook/component/style.scss
+++ b/client/src/containers/Dealbook/component/style.scss
@@ -2,9 +2,8 @@
 
 .dealbook-wrapper {
   width: 100%;
-  height: auto;
   max-width: 1440px;
-  padding: 0 20px 0 300px;
+  padding: 0 20px 0 250px;
 
   @media screen and (max-width: $tablet-width) {
     width: 100%;
@@ -50,7 +49,7 @@
     top: 100px;
     width: 100%;
     height: 460px;
-    max-width: 1059px;
+    max-width: 950px;
     padding: 5vh 0 10vh;
     margin-bottom: 30vh;
 
@@ -86,7 +85,8 @@
   }
 
     img {
-      width: 80%;
+      width: 90%;
+      object-fit: cover;
       @media screen and(max-width: $tablet-width) {
         width: 100%;
       }
@@ -94,10 +94,12 @@
 
     .news-info {
       position: absolute;
-      right: 60px;
-      bottom: 10px;
+      top: 50%;
+      right: -3vw;
       width: 20vw;
+      margin-right: 20px;
       background-color: $wild-sand;
+      transform: translateY(-30%);
       //sass-lint:disable-block no-vendor-prefixes
       -webkit-box-shadow: -21px 21px 54px -11px $black-70;
 
